appId: com.qataskmanager.app
tags:
    - regression
---
- runFlow: ../../flows/login.yaml
- scrollUntilVisible:
        element:
            id: filter-completed
        direction: RIGHT
- tapOn:
    id: filter-completed
- tapOn:
    id: clear-filters
- assertVisible: ${EXISTING_TASK_TITLE}
- assertVisible: ${CHECKOUT_TASK_TITLE}
