appId: com.qataskmanager.app
tags:
    - regression
---
- runFlow: ../../flows/login.yaml
- tapOn:
    id: task-item-1
- tapOn:
    id: complete-task-button
- assertNotVisible:
    id: complete-task-button
